# RAGnos

./: .gitignore  .prompt  README.md  chainlit.md  docker-compose.yml  main.py  pyproject.toml
docs/: ASSESSMENT.md  PROJECT_DOCUMENTATION.md
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: api-reference.md  architecture.md  intro.md  pipeline.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.mdx
src/ragnos/: __init__.py  app.py  core.py  ingest.py
tests/: test_rag_core.py
